--- a/about_us.html
+++ b/about_us.html
@@ -54,27 +54,9 @@
     </nav>
 
     <main class="container">
-      <h1>Головна сторінка</h1>
-      <p>Цей сайт створений з метою розширити кругозір людей щодо тваринного світу.</p>
-      <div class="scheme">
-        <h6>Схема сайту:</h6>
-        <ul>
-          <li><a href="index.html">Головна сторінка</a></li>
-          <li><a href="animal_tops.html">НайТварини</a>
-            <ul>
-              <li><a href="animal_tops/the_strongest.html">Найсильніші</a></li>
-              <li><a href="animal_tops/the_biggest.html">Найбільші</a></li>
-              <li><a href="animal_tops/the_loudest.html">Найгучніші</a></li>
-              <li><a href="animal_tops/the_dangerous.html">Найнебезпечніші</a></li>
-              <li><a href="animal_tops/the_smartest.html">Найрозумніші</a></li>
-              <li><a href="animal_tops/the_fastest.html">Найшвидші</a></li>
-            </ul>
-          </li>
-          <li><a href="amazing_ones.html">Дивовижні Тварини</a></li>
-          <li><a href="callback.html">Зворотний зв'язок</a></li>
-          <li><a href="about_us.html">Про Нас</a></li>
-        </ul>
-      </div>
+      <h1>Про Нас</h1>
+
+      <p>Цей сайт створений з метою розширити кругозір людей щодо тваринного світу, як результат лабораторної роботи №1 з ГтГм</p>
     </main>
 
     <div class="container">
@@ -86,7 +68,7 @@
         </a>
 
         <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="home.html" class="nav-link px-2">Головна сторінка</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link px-2">Головна сторінка</a></li>
           <li class="nav-item"><a href="callback.html" class="nav-link px-2">Зворотний зв'язок</a></li>
           <li class="nav-item"><a href="about_us.html" class="nav-link px-2">Про Нас</a></li>
         </ul>
