--- a/animal_tops/the_smartest.html
+++ b/animal_tops/the_smartest.html
@@ -196,7 +196,7 @@
         </a>
 
         <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="../home.html" class="nav-link px-2">Головна сторінка</a></li>
+          <li class="nav-item"><a href="../index.html" class="nav-link px-2">Головна сторінка</a></li>
           <li class="nav-item"><a href="../callback.html" class="nav-link px-2">Зворотний зв'язок</a></li>
           <li class="nav-item"><a href="../about_us.html" class="nav-link px-2">Про Нас</a></li>
         </ul>
