--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="description" content="Цікаві Тварини">
     <meta name="keywords" content="Тварини, Світ Тварин, Цікаві Тварини">
     <meta name="author" content="John Doe">
-    <link rel="icon" type="image/png" href="../static/images/logo.jfif"/>
+    <link rel="icon" type="image/png" href="static/images/logo.jfif"/>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <title>Цікаві Тварини</title>
   </head>
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img width="30" height="30" class="d-inline-block align-top" src="../static/images/logo.jfif" alt="Цікаві Тварини">
+          <img width="30" height="30" class="d-inline-block align-top" src="static/images/logo.jfif" alt="Цікаві Тварини">
           Цікаві Тварини
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,9 +54,27 @@
     </nav>
 
     <main class="container">
-      <h1>Про Нас</h1>
-
-      <p>Цей сайт створений з метою розширити кругозір людей щодо тваринного світу, як результат лабораторної роботи №1 з ГтГм</p>
+      <h1>Головна сторінка</h1>
+      <p>Цей сайт створений з метою розширити кругозір людей щодо тваринного світу.</p>
+      <div class="scheme">
+        <h6>Схема сайту:</h6>
+        <ul>
+          <li><a href="index.html">Головна сторінка</a></li>
+          <li><a href="animal_tops.html">НайТварини</a>
+            <ul>
+              <li><a href="animal_tops/the_strongest.html">Найсильніші</a></li>
+              <li><a href="animal_tops/the_biggest.html">Найбільші</a></li>
+              <li><a href="animal_tops/the_loudest.html">Найгучніші</a></li>
+              <li><a href="animal_tops/the_dangerous.html">Найнебезпечніші</a></li>
+              <li><a href="animal_tops/the_smartest.html">Найрозумніші</a></li>
+              <li><a href="animal_tops/the_fastest.html">Найшвидші</a></li>
+            </ul>
+          </li>
+          <li><a href="amazing_ones.html">Дивовижні Тварини</a></li>
+          <li><a href="callback.html">Зворотний зв'язок</a></li>
+          <li><a href="about_us.html">Про Нас</a></li>
+        </ul>
+      </div>
     </main>
 
     <div class="container">
@@ -68,7 +86,7 @@
         </a>
 
         <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="home.html" class="nav-link px-2">Головна сторінка</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link px-2">Головна сторінка</a></li>
           <li class="nav-item"><a href="callback.html" class="nav-link px-2">Зворотний зв'язок</a></li>
           <li class="nav-item"><a href="about_us.html" class="nav-link px-2">Про Нас</a></li>
         </ul>
