--- a/amazing_ones.html
+++ b/amazing_ones.html
@@ -7,14 +7,14 @@
     <meta name="description" content="Цікаві Тварини">
     <meta name="keywords" content="Тварини, Світ Тварин, Цікаві Тварини">
     <meta name="author" content="John Doe">
-    <link rel="icon" type="image/png" href="../static/images/logo.jfif"/>
+    <link rel="icon" type="image/png" href="static/images/logo.jfif"/>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/amazing_ones.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/amazing_ones.css">
 
     <title>Цікаві Тварини</title>
   </head>
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img width="30" height="30" class="d-inline-block align-top" src="../static/images/logo.jfif" alt="Цікаві Тварини">
+          <img width="30" height="30" class="d-inline-block align-top" src="static/images/logo.jfif" alt="Цікаві Тварини">
           Цікаві Тварини
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,7 +59,7 @@
 
       <div class="animals">
         <article class="animal">
-          <img class="animal_photo" src="../static/images/amazing_ones/Ілі_піка.jpg" alt="Фото Ілі Піки">
+          <img class="animal_photo" src="static/images/amazing_ones/Ілі_піка.jpg" alt="Фото Ілі Піки">
           <h5 class="animal_name">
             <a target="_blank" href="https://uk.wikipedia.org/wiki/%D0%9F%D0%B8%D1%81%D0%BA%D1%83%D1%85%D0%B0">
               Ілі Піка
@@ -72,7 +72,7 @@
         </article>
 
         <article class="animal">
-          <img class="animal_photo" src="../static/images/amazing_ones/Піноккіо.jpg" alt="Фото Деревної Жаби Піноккіо">
+          <img class="animal_photo" src="static/images/amazing_ones/Піноккіо.jpg" alt="Фото Деревної Жаби Піноккіо">
           <h5 class="animal_name">
             <a target="_blank" href="https://uk.wikipedia.org/wiki/Litoria_caerulea">
               Деревна Жаба Піноккіо
@@ -111,7 +111,7 @@
         </article>
 
         <article class="animal">
-          <img class="animal_photo" src="../static/images/amazing_ones/коник.jpg" alt="Фото Рожевоокого Конику">
+          <img class="animal_photo" src="static/images/amazing_ones/коник.jpg" alt="Фото Рожевоокого Конику">
           <h5 class="animal_name">
             <a target="_blank" href="https://uk.wikipedia.org/wiki/%D0%A1%D0%BF%D1%80%D0%B0%D0%B2%D0%B6%D0%BD%D1%96_%D0%BA%D0%BE%D0%BD%D0%B8%D0%BA%D0%B8">
               Рожевоокий Коник
@@ -123,7 +123,7 @@
         </article>
 
         <article class="animal">
-          <img class="animal_photo" src="../static/images/amazing_ones/кажан.jpg" alt="Фото Трубконосого Фруктового Кажана">
+          <img class="animal_photo" src="static/images/amazing_ones/кажан.jpg" alt="Фото Трубконосого Фруктового Кажана">
           <h5 class="animal_name">
             <a target="_blank" href="https://uk.wikipedia.org/wiki/%D0%9A%D0%B0%D0%B6%D0%B0%D0%BD%D0%B8">
               Трубконосий Фруктовий Кажан
