--- a/animal_tops.html
+++ b/animal_tops.html
@@ -7,14 +7,14 @@
     <meta name="description" content="Цікаві Тварини">
     <meta name="keywords" content="Тварини, Світ Тварин, Цікаві Тварини">
     <meta name="author" content="John Doe">
-    <link rel="icon" type="image/png" href="../static/images/logo.jfif"/>
+    <link rel="icon" type="image/png" href="static/images/logo.jfif"/>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/animal_tops.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/animal_tops.css">
 
     <title>Цікаві Тварини</title>
   </head>
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img width="30" height="30" class="d-inline-block align-top" src="../static/images/logo.jfif" alt="Цікаві Тварини">
+          <img width="30" height="30" class="d-inline-block align-top" src="static/images/logo.jfif" alt="Цікаві Тварини">
           Цікаві Тварини
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,37 +60,37 @@
       <section class="top-list">
         <a href="animal_tops/the_strongest.html">
           <article class="top">
-            <img class="top-image" src="../static/images/animal_tops/strongest.jfif" alt="Найсильніші картинка">
+            <img class="top-image" src="static/images/animal_tops/strongest.jfif" alt="Найсильніші картинка">
             <h4 class="top-name">Найсильніші</h4>
           </article>
         </a>
         <a href="animal_tops/the_fastest.html">
           <article class="top">
-            <img class="top-image" src="../static/images/animal_tops/fastest.jfif" alt="Найшвидші картинка">
+            <img class="top-image" src="static/images/animal_tops/fastest.jfif" alt="Найшвидші картинка">
             <h4 class="top-name">Найшвидші</h4>
           </article>
         </a>
         <a href="animal_tops/the_biggest.html">
           <article class="top">
-            <img class="top-image" src="../static/images/animal_tops/biggest.jfif" alt="Найбільші картинка">
+            <img class="top-image" src="static/images/animal_tops/biggest.jfif" alt="Найбільші картинка">
             <h4 class="top-name">Найбільші</h4>
           </article>
         </a>
         <a href="animal_tops/the_dangerous.html">
           <article class="top">
-            <img class="top-image" src="../static/images/animal_tops/dangerous.jfif" alt="Найнебезпечніші картинка">
+            <img class="top-image" src="static/images/animal_tops/dangerous.jfif" alt="Найнебезпечніші картинка">
             <h4 class="top-name">Найнебезпечніші</h4>
           </article>
         </a>
         <a href="animal_tops/the_loudest.html">
           <article class="top">
-            <img class="top-image" src="../static/images/animal_tops/loudest.jfif" alt="Найгучніші картинка">
+            <img class="top-image" src="static/images/animal_tops/loudest.jfif" alt="Найгучніші картинка">
             <h4 class="top-name">Найгучніші</h4>
           </article>
         </a>
         <a href="animal_tops/the_smartest.html">
           <article class="top">
-            <img class="top-image" src="../static/images/animal_tops/smartest.jfif" alt="Найрозумніші картинка">
+            <img class="top-image" src="static/images/animal_tops/smartest.jfif" alt="Найрозумніші картинка">
             <h4 class="top-name">Найрозумніші</h4>
           </article>
         </a>
