--- a/animal_tops/the_biggest.html
+++ b/animal_tops/the_biggest.html
@@ -7,14 +7,14 @@
     <meta name="description" content="Цікаві Тварини">
     <meta name="keywords" content="Тварини, Світ Тварин, Цікаві Тварини">
     <meta name="author" content="John Doe">
-    <link rel="icon" type="image/png" href="../../static/images/logo.jfif"/>
+    <link rel="icon" type="image/png" href="../static/images/logo.jfif"/>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="../../css/main.css">
-    <link rel="stylesheet" href="../../css/animal_tops_page.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/animal_tops_page.css">
 
     <title>Цікаві Тварини</title>
   </head>
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html">
-          <img width="30" height="30" class="d-inline-block align-top" src="../../static/images/logo.jfif" alt="Цікаві Тварини">
+          <img width="30" height="30" class="d-inline-block align-top" src="../static/images/logo.jfif" alt="Цікаві Тварини">
           Цікаві Тварини
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +60,7 @@
       <div class="animals">
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/biggest/wale.jpg" alt="Фото Блакитного Кита">
+            <img class="animal_photo" src="../static/images/animal_tops/biggest/wale.jpg" alt="Фото Блакитного Кита">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%9A%D0%B8%D1%82_%D1%81%D0%B8%D0%BD%D1%96%D0%B9">Блакитний кит</a>
           </aside>
           <div class="animal_bio">
@@ -78,7 +78,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/biggest/elephant.jpg" alt="Фото Африканського Слона">
+            <img class="animal_photo" src="../static/images/animal_tops/biggest/elephant.jpg" alt="Фото Африканського Слона">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%90%D1%84%D1%80%D0%B8%D0%BA%D0%B0%D0%BD%D1%81%D1%8C%D0%BA%D0%B8%D0%B9_%D1%81%D0%BB%D0%BE%D0%BD">Африканський Слон</a>
           </aside>
           <div class="animal_bio">
@@ -104,7 +104,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/biggest/gipaph.jpg" alt="Фото Жирафа">
+            <img class="animal_photo" src="../static/images/animal_tops/biggest/gipaph.jpg" alt="Фото Жирафа">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%96%D0%B8%D1%80%D0%B0%D1%84%D0%B0">Жирафа</a>
           </aside>
           <div class="animal_bio">
@@ -123,7 +123,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/biggest/some_sort_of_dog.jpg" alt="Фото Гребенястого Південний Морського Слона">
+            <img class="animal_photo" src="../static/images/animal_tops/biggest/some_sort_of_dog.jpg" alt="Фото Гребенястого Південний Морського Слона">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%9C%D0%BE%D1%80%D1%81%D1%8C%D0%BA%D0%B8%D0%B9_%D1%81%D0%BB%D0%BE%D0%BD_%D0%BF%D1%96%D0%B2%D0%B4%D0%B5%D0%BD%D0%BD%D0%B8%D0%B9">Південний Морський Слон</a>
           </aside>
           <div class="animal_bio">
@@ -143,7 +143,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/biggest/bear.jpg" alt="Фото Ведмідя Кадьяка">
+            <img class="animal_photo" src="../static/images/animal_tops/biggest/bear.jpg" alt="Фото Ведмідя Кадьяка">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%92%D0%B5%D0%B4%D0%BC%D1%96%D0%B4%D1%8C_%D0%B1%D1%83%D1%80%D0%B8%D0%B9_%D0%BA%D0%B0%D0%B4%D1%8C%D1%8F%D1%86%D1%8C%D0%BA%D0%B8%D0%B9">Ведмідь Кадьяк</a>
           </aside>
           <div class="animal_bio">
