--- a/animal_tops/the_dangerous.html
+++ b/animal_tops/the_dangerous.html
@@ -7,14 +7,14 @@
     <meta name="description" content="Цікаві Тварини">
     <meta name="keywords" content="Тварини, Світ Тварин, Цікаві Тварини">
     <meta name="author" content="John Doe">
-    <link rel="icon" type="image/png" href="../../static/images/logo.jfif"/>
+    <link rel="icon" type="image/png" href="../static/images/logo.jfif"/>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="../../css/main.css">
-    <link rel="stylesheet" href="../../css/animal_tops_page.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/animal_tops_page.css">
 
     <title>Цікаві Тварини</title>
   </head>
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html">
-          <img width="30" height="30" class="d-inline-block align-top" src="../../static/images/logo.jfif" alt="Цікаві Тварини">
+          <img width="30" height="30" class="d-inline-block align-top" src="../static/images/logo.jfif" alt="Цікаві Тварини">
           Цікаві Тварини
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +60,7 @@
       <div class="animals">
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/dangerous/meduza.jpg" alt="Фото Морської Оси">
+            <img class="animal_photo" src="../static/images/animal_tops/dangerous/meduza.jpg" alt="Фото Морської Оси">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%9C%D0%BE%D1%80%D1%81%D1%8C%D0%BA%D0%B0_%D0%BE%D1%81%D0%B0">Морська Оса</a>
           </aside>
           <div class="animal_bio">
@@ -76,7 +76,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/dangerous/wbear.jpg" alt="Фото Білого Ведмідя">
+            <img class="animal_photo" src="../static/images/animal_tops/dangerous/wbear.jpg" alt="Фото Білого Ведмідя">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%92%D0%B5%D0%B4%D0%BC%D1%96%D0%B4%D1%8C_%D0%B1%D1%96%D0%BB%D0%B8%D0%B9">Білий Ведмідь</a>
           </aside>
           <div class="animal_bio">
@@ -92,7 +92,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/dangerous/bee.jpg" alt="Фото Бджоли-вбивці">
+            <img class="animal_photo" src="../static/images/animal_tops/dangerous/bee.jpg" alt="Фото Бджоли-вбивці">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%90%D1%84%D1%80%D0%B8%D0%BA%D0%B0%D0%BD%D1%96%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B0_%D0%B1%D0%B4%D0%B6%D0%BE%D0%BB%D0%B0">Бджоли-вбивці</a>
           </aside>
           <div class="animal_bio">
@@ -106,7 +106,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/dangerous/komar.jpg" alt="Фото Москіта">
+            <img class="animal_photo" src="../static/images/animal_tops/dangerous/komar.jpg" alt="Фото Москіта">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%9C%D0%BE%D1%81%D0%BA%D1%96%D1%82%D0%B8">Москіти</a>
           </aside>
           <div class="animal_bio">
@@ -121,7 +121,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/dangerous/begemot.jpg" alt="Фото Бегемота">
+            <img class="animal_photo" src="../static/images/animal_tops/dangerous/begemot.jpg" alt="Фото Бегемота">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%91%D0%B5%D0%B3%D0%B5%D0%BC%D0%BE%D1%82_%D0%B7%D0%B2%D0%B8%D1%87%D0%B0%D0%B9%D0%BD%D0%B8%D0%B9">Бегемот</a>
           </aside>
           <div class="animal_bio">
