--- a/animal_tops/the_fastest.html
+++ b/animal_tops/the_fastest.html
@@ -7,14 +7,14 @@
     <meta name="description" content="Цікаві Тварини">
     <meta name="keywords" content="Тварини, Світ Тварин, Цікаві Тварини">
     <meta name="author" content="John Doe">
-    <link rel="icon" type="image/png" href="../../static/images/logo.jfif"/>
+    <link rel="icon" type="image/png" href="../static/images/logo.jfif"/>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="../../css/main.css">
-    <link rel="stylesheet" href="../../css/animal_tops_page.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/animal_tops_page.css">
 
     <title>Цікаві Тварини</title>
   </head>
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html">
-          <img width="30" height="30" class="d-inline-block align-top" src="../../static/images/logo.jfif" alt="Цікаві Тварини">
+          <img width="30" height="30" class="d-inline-block align-top" src="../static/images/logo.jfif" alt="Цікаві Тварини">
           Цікаві Тварини
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +60,7 @@
       <div class="animals">
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/fasters/gepard.jpg" alt="Фото Південноамериканська Гепарду">
+            <img class="animal_photo" src="../static/images/animal_tops/fasters/gepard.jpg" alt="Фото Південноамериканська Гепарду">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%93%D0%B5%D0%BF%D0%B0%D1%80%D0%B4_%D1%81%D1%82%D1%80%D1%83%D0%BD%D0%BA%D0%B8%D0%B9">Гепард</a>
           </aside>
           <div class="animal_bio">
@@ -77,7 +77,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/fasters/antilopa.jpg" alt="Фото Вилорогої Антилопи">
+            <img class="animal_photo" src="../static/images/animal_tops/fasters/antilopa.jpg" alt="Фото Вилорогої Антилопи">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%92%D0%B8%D0%BB%D0%BE%D1%80%D1%96%D0%B3">Вилорога Антилопа</a>
           </aside>
           <div class="animal_bio">
@@ -94,7 +94,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/fasters/gnu.jpg" alt="Фото Антилопи Гну">
+            <img class="animal_photo" src="../static/images/animal_tops/fasters/gnu.jpg" alt="Фото Антилопи Гну">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%93%D0%BD%D1%83">Антилопа Гну</a>
           </aside>
           <div class="animal_bio">
@@ -110,7 +110,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/fasters/lion.jpg" alt="Фото Льва">
+            <img class="animal_photo" src="../static/images/animal_tops/fasters/lion.jpg" alt="Фото Льва">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%9B%D0%B5%D0%B2">Лев</a>
           </aside>
           <div class="animal_bio">
@@ -129,7 +129,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/fasters/tomson.jpg" alt="Фото Газелі Томсона">
+            <img class="animal_photo" src="../static/images/animal_tops/fasters/tomson.jpg" alt="Фото Газелі Томсона">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%93%D0%B0%D0%B7%D0%B5%D0%BB%D1%8C_%D0%A2%D0%BE%D0%BC%D1%81%D0%BE%D0%BD%D0%B0">Газель Томсона</a>
           </aside>
           <div class="animal_bio">
