--- a/animal_tops/the_loudest.html
+++ b/animal_tops/the_loudest.html
@@ -7,14 +7,14 @@
     <meta name="description" content="Цікаві Тварини">
     <meta name="keywords" content="Тварини, Світ Тварин, Цікаві Тварини">
     <meta name="author" content="John Doe">
-    <link rel="icon" type="image/png" href="../../static/images/logo.jfif"/>
+    <link rel="icon" type="image/png" href="../static/images/logo.jfif"/>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="../../css/main.css">
-    <link rel="stylesheet" href="../../css/animal_tops_page.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/animal_tops_page.css">
 
     <title>Цікаві Тварини</title>
   </head>
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html">
-          <img width="30" height="30" class="d-inline-block align-top" src="../../static/images/logo.jfif" alt="Цікаві Тварини">
+          <img width="30" height="30" class="d-inline-block align-top" src="../static/images/logo.jfif" alt="Цікаві Тварини">
           Цікаві Тварини
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +60,7 @@
       <div class="animals">
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/loudest/кит.jpg" alt="Фото Кита">
+            <img class="animal_photo" src="../static/images/animal_tops/loudest/кит.jpg" alt="Фото Кита">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%9A%D0%B8%D1%82%D0%B8">Кит</a>
           </aside>
           <div class="animal_bio">
@@ -76,7 +76,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/loudest/тигрова-креветка.jpeg" alt="Фото Тигрової Креветки">
+            <img class="animal_photo" src="../static/images/animal_tops/loudest/тигрова-креветка.jpeg" alt="Фото Тигрової Креветки">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%9A%D1%80%D0%B5%D0%B2%D0%B5%D1%82%D0%BA%D0%B8">Тигрова Креветка</a>
           </aside>
           <div class="animal_bio">
@@ -93,7 +93,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/loudest/мавпа-ревун.jpg" alt="Фото Мавпи-ревуну">
+            <img class="animal_photo" src="../static/images/animal_tops/loudest/мавпа-ревун.jpg" alt="Фото Мавпи-ревуну">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%A0%D0%B5%D0%B2%D1%83%D0%BD_(%D0%BC%D0%B0%D0%B2%D0%BF%D0%B0)">Мавпа-ревун</a>
           </aside>
           <div class="animal_bio">
@@ -109,7 +109,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/loudest/морський-слон.jpg" alt="Фото Морського Слону">
+            <img class="animal_photo" src="../static/images/animal_tops/loudest/морський-слон.jpg" alt="Фото Морського Слону">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%9C%D0%BE%D1%80%D1%81%D1%8C%D0%BA%D0%B8%D0%B9_%D1%81%D0%BB%D0%BE%D0%BD">Морський Слон</a>
           </aside>
           <div class="animal_bio">
@@ -125,7 +125,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/loudest/цикада.jpg" alt="Фото Зеленої Цикади">
+            <img class="animal_photo" src="../static/images/animal_tops/loudest/цикада.jpg" alt="Фото Зеленої Цикади">
             <a class="photo_desc" target="_blank" href="https://ru.wikipedia.org/wiki/%D0%97%D0%B5%D0%BB%D1%91%D0%BD%D0%B0%D1%8F_%D1%86%D0%B8%D0%BA%D0%B0%D0%B4%D0%BA%D0%B0">Зелена Цикада</a>
           </aside>
           <div class="animal_bio">
