--- a/animal_tops/the_smartest.html
+++ b/animal_tops/the_smartest.html
@@ -7,14 +7,14 @@
     <meta name="description" content="Цікаві Тварини">
     <meta name="keywords" content="Тварини, Світ Тварин, Цікаві Тварини">
     <meta name="author" content="John Doe">
-    <link rel="icon" type="image/png" href="../../static/images/logo.jfif"/>
+    <link rel="icon" type="image/png" href="../static/images/logo.jfif"/>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="../../css/main.css">
-    <link rel="stylesheet" href="../../css/animal_tops_page.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/animal_tops_page.css">
 
     <title>Цікаві Тварини</title>
   </head>
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html">
-          <img width="30" height="30" class="d-inline-block align-top" src="../../static/images/logo.jfif" alt="Цікаві Тварини">
+          <img width="30" height="30" class="d-inline-block align-top" src="../static/images/logo.jfif" alt="Цікаві Тварини">
           Цікаві Тварини
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +60,7 @@
       <div class="animals">
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/smartest/примати.jpg" alt="Фото Примата">
+            <img class="animal_photo" src="../static/images/animal_tops/smartest/примати.jpg" alt="Фото Примата">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%9F%D1%80%D0%B8%D0%BC%D0%B0%D1%82%D0%B8">Примат</a>
           </aside>
           <div class="animal_bio">
@@ -86,7 +86,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/smartest/дельфіни.jpg" alt="Фото Дельфіна">
+            <img class="animal_photo" src="../static/images/animal_tops/smartest/дельфіни.jpg" alt="Фото Дельфіна">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%94%D0%B5%D0%BB%D1%8C%D1%84%D1%96%D0%BD">Дельфін</a>
           </aside>
           <div class="animal_bio">
@@ -110,7 +110,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/smartest/слон.jpg" alt="Фото Слона">
+            <img class="animal_photo" src="../static/images/animal_tops/smartest/слон.jpg" alt="Фото Слона">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%A1%D0%BB%D0%BE%D0%BD">Слон</a>
           </aside>
           <div class="animal_bio">
@@ -135,7 +135,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/smartest/Бордер-коллі.jpg" alt="Фото Собаки">
+            <img class="animal_photo" src="../static/images/animal_tops/smartest/Бордер-коллі.jpg" alt="Фото Собаки">
             <a class="photo_desc" target="_blank" href="https://ru.wikipedia.org/wiki/%D0%A1%D0%BE%D0%B1%D0%B0%D0%BA%D0%B0">Собака</a>
           </aside>
           <div class="animal_bio">
@@ -163,7 +163,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/smartest/кит.jpg" alt="Фото Кита">
+            <img class="animal_photo" src="../static/images/animal_tops/smartest/кит.jpg" alt="Фото Кита">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%9A%D0%B8%D1%82%D0%B8">Кит</a>
           </aside>
           <div class="animal_bio">
