--- a/animal_tops/the_strongest.html
+++ b/animal_tops/the_strongest.html
@@ -7,14 +7,14 @@
     <meta name="description" content="Цікаві Тварини">
     <meta name="keywords" content="Тварини, Світ Тварин, Цікаві Тварини">
     <meta name="author" content="John Doe">
-    <link rel="icon" type="image/png" href="../../static/images/logo.jfif"/>
+    <link rel="icon" type="image/png" href="../static/images/logo.jfif"/>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="../../css/main.css">
-    <link rel="stylesheet" href="../../css/animal_tops_page.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/animal_tops_page.css">
 
     <title>Цікаві Тварини</title>
   </head>
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html">
-          <img width="30" height="30" class="d-inline-block align-top" src="../../static/images/logo.jfif" alt="Цікаві Тварини">
+          <img width="30" height="30" class="d-inline-block align-top" src="../static/images/logo.jfif" alt="Цікаві Тварини">
           Цікаві Тварини
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +60,7 @@
       <div class="animals">
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/strongest/Pivdennoamerykanska-garpiya.jpg" alt="Фото Південноамериканська Гарпії">
+            <img class="animal_photo" src="../static/images/animal_tops/strongest/Pivdennoamerykanska-garpiya.jpg" alt="Фото Південноамериканська Гарпії">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%93%D0%B0%D1%80%D0%BF%D1%96%D1%8F_%D0%B2%D0%B5%D0%BB%D0%B8%D0%BA%D0%B0">Південноамериканська Гарпія</a>
           </aside>
           <div class="animal_bio">
@@ -77,7 +77,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/strongest/Goryla-najsylnishyj-prymat.jpg" alt="Фото Горили">
+            <img class="animal_photo" src="../static/images/animal_tops/strongest/Goryla-najsylnishyj-prymat.jpg" alt="Фото Горили">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%93%D0%BE%D1%80%D0%B8%D0%BB%D0%B0">Горила</a>
           </aside>
           <div class="animal_bio">
@@ -92,7 +92,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/strongest/Tygr-najsylisha-kishka.jpg" alt="Фото Тигру">
+            <img class="animal_photo" src="../static/images/animal_tops/strongest/Tygr-najsylisha-kishka.jpg" alt="Фото Тигру">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%A2%D0%B8%D0%B3%D1%80">Тигр</a>
           </aside>
           <div class="animal_bio">
@@ -109,7 +109,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/strongest/Grebenyastyj-krokodyl.jpg" alt="Фото Гребенястого Крокодилу">
+            <img class="animal_photo" src="../static/images/animal_tops/strongest/Grebenyastyj-krokodyl.jpg" alt="Фото Гребенястого Крокодилу">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%9A%D1%80%D0%BE%D0%BA%D0%BE%D0%B4%D0%B8%D0%BB_%D0%B3%D1%80%D0%B5%D0%B1%D0%B5%D0%BD%D1%8F%D1%81%D1%82%D0%B8%D0%B9">Гребенястий Крокодил</a>
           </aside>
           <div class="animal_bio">
@@ -126,7 +126,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/strongest/ZHuk-gnojovyk.jpg" alt="Фото Жука-гнойовика">
+            <img class="animal_photo" src="../static/images/animal_tops/strongest/ZHuk-gnojovyk.jpg" alt="Фото Жука-гнойовика">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%96%D1%83%D0%BA%D0%B8-%D0%B3%D0%BD%D0%BE%D0%B9%D0%BE%D0%B2%D0%B8%D0%BA%D0%B8">Жук-гнойовик</a>
           </aside>
           <div class="animal_bio">
@@ -141,7 +141,7 @@
 
         <article class="animal">
           <aside>
-            <img class="animal_photo" src="../../static/images/animal_tops/strongest/Rachok-kopepod.jpg" alt="Фото Копеподу">
+            <img class="animal_photo" src="../static/images/animal_tops/strongest/Rachok-kopepod.jpg" alt="Фото Копеподу">
             <a class="photo_desc" target="_blank" href="https://uk.wikipedia.org/wiki/%D0%92%D0%B5%D1%81%D0%BB%D0%BE%D0%BD%D0%BE%D0%B3%D1%96_%D1%80%D0%B0%D0%BA%D0%B8">Копепод</a>
           </aside>
           <div class="animal_bio">
